--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/guilhermesantos0/discord_whatsapp#readme",
   "dependencies": {
     "discord.js": "^14.7.1",
+    "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.18.4"
   }
